# CertWatch

./: .gitignore  DEPLOY.md  README.md  pyproject.toml  requirements.txt
backend/runner/: run_checker.py
backend/scripts/: bootstrap.py
backend/ssl_monitor/api/: app.py  dependencies.py  schemas.py
backend/ssl_monitor/auth/: models.py  rate_limit.py  security.py  users.py
backend/ssl_monitor/config/: settings.py
backend/ssl_monitor/core/: cert_probe.py  models.py  status.py  thresholds.py
backend/ssl_monitor/handlers/: _deps.py  checker.py
backend/ssl_monitor/services/: checker.py  digest.py  domains.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_flow.py
backend/tests/unit/: test_api.py  test_auth_hardening.py  test_cert_probe.py  test_checker_service.py  test_digest.py  test_domain_config.py  test_notifier_console.py  test_runner.py  test_settings.py  test_status.py  test_storage_memory.py  test_thresholds.py
deploy/: certwatch-api.service  certwatch-checker-loop.service  certwatch-checker.service  certwatch-checker.timer  certwatch.env.example  nginx.conf  setup.sh  update-pm2.sh  update.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AddDomainForm.tsx  AddDomainModal.tsx  AuroraBackground.tsx  BulkImportModal.tsx  ChangePasswordModal.tsx  ConfirmDialog.tsx  Dashboard.tsx  DomainDetail.tsx  DomainTable.tsx  ExportMenu.tsx  ForecastWidget.tsx  HealthRing.tsx  (+8 more)
(+11 files in other folders)
