[project]
name = "ssl-expiry-dashboard"
version = "0.1.0"
description = "SSL certificate expiry monitoring dashboard (local-first, cloud-portable)"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43,<48",
    "boto3>=1.35,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pyjwt>=2.9,<3",
    "reportlab>=4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
# The repo holds both the Python app and the JS frontend at the top level;
# only package the backend so editable installs don't choke on auto-discovery.
include = ["backend*"]

# Runs on Python 3.12+ (the EC2 host and local dev). The code avoids
# version-specific syntax so the same source runs unchanged.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
markers = [
    "integration: tests that require LocalStack to be running",
]

[tool.ruff]
line-length = 100
target-version = "py312"
